Bug 64287 - missing preview in "Insert Index/Table" dialog
Summary: missing preview in "Insert Index/Table" dialog
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.1.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.1.0
Keywords: regression
: 65065 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-05-06 19:26 UTC by Andras Timar
Modified: 2013-05-28 08:53 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andras Timar 2013-05-06 19:26:10 UTC
In Writer Insert - Indexes and Tables - Indexes and tables
Make sure Preview is checked. Preview is not there, only its placeholder.
Bisected. f5391df4548789acf71a45550742a2d3bbb3b7e4 is the first bad commit
commit f5391df4548789acf71a45550742a2d3bbb3b7e4
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Tue Jan 8 15:05:55 2013 +0000

    rework unotools doc previewer

Bug 44192 is related. Maybe one commit can fix both.
Comment 1 Commit Notification 2013-05-13 12:46:42 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=38504054d87e3fb8b29cd1172965fb5012983a75

Resolves: fdo#64287 missing insert index/table preview



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Caolán McNamara 2013-05-13 13:01:03 UTC
gotcha
Comment 3 Andras Timar 2013-05-28 08:53:05 UTC
*** Bug 65065 has been marked as a duplicate of this bug. ***