Resolves: fdo#64287 missing insert index/table preview

Change-Id: I90aab9339362565dd49b72dd057717f7bbf3d874